Opened 15 years ago
Closed 15 years ago
#6457 closed bug (fixed)
ActivityMonitor doesn't show network speed
Reported by: | idefix | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/ActivityMonitor | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #6471 | |
Platform: | All |
Attachments (1)
Change History (6)
by , 15 years ago
Attachment: | activitymonitor-network.png added |
---|
comment:1 by , 15 years ago
Status: | new → in-progress |
---|
comment:3 by , 15 years ago
Confirmed fixed (tested with hrev38209).
You may now close this ticket. ;)
comment:4 by , 15 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
Thanks! Seems I forgotten about that detail :-)
comment:5 by , 15 years ago
Blocking: | 6471 added |
---|
Note:
See TracTickets
for help on using tickets.
Screenshot of ActivityMonitor not showing the current network speeds