* The ActivityMonitor now uses the new network C++ API to retrieve the   interface stats. This fixes bug #6457.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@38182 a95241bf-73f2-0310-859d-f6bbb57e9c96